Query update, table creation, and prep for jupyter/pandas interaction

--- a/yelp_curate.ipynb
+++ b/yelp_curate.ipynb
@@ -112,35 +112,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def whereCond(filename):\n",
+    "    '''\n",
+    "    Function to take a list of category labels and create \n",
+    "    a string with '(' and ')' and quotes on every line of\n",
+    "    the file to create a tuple for the SQL where condition\n",
+    "    \n",
+    "    INPUT: filename (string)\n",
+    "      - file should be one entry per line\n",
+    "      - entries in category table\n",
+    "    '''\n",
+    "    \n",
+    "    # start our conditional statement\n",
+    "    where = '(\\\"'\n",
+    "\n",
+    "    with open(filename) as f:\n",
+    "        for token in f:\n",
+    "            where +=  token.strip() + '\\\", \\\"'\n",
+    "\n",
+    "    # drop (comma, space, quote)\n",
+    "    where = where[:-3]\n",
+    "\n",
+    "    # close off our conditional\n",
+    "    where += \")\"\n",
+    "\n",
+    "    return where\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(\"Food (food)\", \"Acai Bowls (acaibowls)\", \"Bagels (bagels)\", \"Bakeries (bakeries)\")\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'(\"Food (food)\", \"Acai Bowls (acaibowls)\", \"Bagels (bagels)\", \"Bakeries (bakeries)\", \"Beer, Wine & Spirits (beer_and_wine)\", \"Beverage Store (beverage_stores)\", \"Breweries (breweries)\", \"Brewpubs (brewpubs)\", \"Bubble Tea (bubbletea)\", \"Butcher (butcher)\", \"CSA (csa)\", \"Chimney Cakes (chimneycakes)\", \"Cideries (cideries)\", \"Coffee & Tea (coffee)\", \"Coffee Roasteries (coffeeroasteries)\", \"Convenience Stores (convenience)\", \"Cupcakes (cupcakes)\", \"Custom Cakes (customcakes)\", \"Desserts (desserts)\", \"Distilleries (distilleries)\", \"Do-It-Yourself Food (diyfood)\", \"Donuts (donuts)\", \"Empanadas (empanadas)\", \"Farmers Market (farmersmarket)\", \"Food Delivery Services (fooddeliveryservices)\", \"Food Trucks (foodtrucks)\", \"Gelato (gelato)\", \"Grocery (grocery)\", \"Honey (honey)\", \"Ice Cream & Frozen Yogurt (icecream)\", \"Imported Food (importedfood)\", \"International Grocery (intlgrocery)\", \"Internet Cafes (internetcafe)\", \"Juice Bars & Smoothies (juicebars)\", \"Kombucha (kombucha)\", \"Organic Stores (organic_stores)\", \"Patisserie/Cake Shop (cakeshop)\", \"Piadina (piadina)\", \"Poke (poke)\", \"Pretzels (pretzels)\", \"Shaved Ice (shavedice)\", \"Shaved Snow (shavedsnow)\", \"Smokehouse (smokehouse)\", \"Specialty Food (gourmet)\", \"Candy Stores (candy)\", \"Cheese Shops (cheese)\", \"Chocolatiers & Shops (chocolate)\", \"Fruits & Veggies (markets)\", \"Health Markets (healthmarkets)\", \"Herbs & Spices (herbsandspices)\", \"Macarons (macarons)\", \"Meat Shops (meats)\", \"Olive Oil (oliveoil)\", \"Pasta Shops (pastashops)\", \"Popcorn Shops (popcorn)\", \"Seafood Markets (seafoodmarkets)\", \"Street Vendors (streetvendors)\", \"Tea Rooms (tea)\", \"Water Stores (waterstores)\", \"Wineries (wineries)\", \"Wine Tasting Room (winetastingroom)\", \"'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# start our conditional statement\n",
-    "\n",
-    "where = '(\\\"'\n",
-    "\n",
-    "with open('fromYelp.txt') as f:\n",
-    "    for i in range(4):\n",
-    "        where +=  f.readline().strip() + '\\\", \\\"'\n",
-    "\n",
-    "# drop (comma, space, quote)\n",
-    "where = where[:-3]\n",
-    "\n",
-    "# close off our conditional\n",
-    "where += \")\"\n",
-    "\n",
-    "print(where)\n",
-    "\n",
-    "    "
+    "whereCond('fromYelp.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(\"Mexican\", \"Chinese\", \"Indian\", \"Vegetarian\", \"Vegan\")'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "whereCond('list2str.txt')"
    ]
   },
   {
