Corrected the binary column for vegFriendly

--- a/RF_Yelp-VegFrnd.ipynb
+++ b/RF_Yelp-VegFrnd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 856 ms, sys: 484 ms, total: 1.34 s\n",
+      "Wall time: 1.34 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df = pd.read_pickle(\"newRev_VegCols_US.pkl\")"
@@ -53,35 +62,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    733919\n",
+       "1.0    119166\n",
+       "2.0     69917\n",
+       "Name: vegFriendly, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['vegFriendly'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "two = df['vegFriendly'] == 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "two = df['vegFriendly'] == 2\n",
+    "\n",
     "%%time\n",
-    "df[two] = 1"
+    "df[two] = 1\n",
+    "\n",
+    "df['vegFriendly'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 923002 entries, 0 to 923001\n",
+      "Data columns (total 17 columns):\n",
+      "business_id    923002 non-null object\n",
+      "name           923002 non-null object\n",
+      "review_id      923002 non-null object\n",
+      "stars          923002 non-null int64\n",
+      "date           923002 non-null object\n",
+      "text           923002 non-null object\n",
+      "useful         923002 non-null int64\n",
+      "funny          923002 non-null int64\n",
+      "cool           923002 non-null int64\n",
+      "city           923002 non-null object\n",
+      "state          923002 non-null object\n",
+      "Thai           923002 non-null float64\n",
+      "Italian        923002 non-null float64\n",
+      "Indian         923002 non-null float64\n",
+      "Chinese        923002 non-null float64\n",
+      "Mexican        923002 non-null float64\n",
+      "Text_length    923002 non-null int64\n",
+      "dtypes: float64(5), int64(5), object(7)\n",
+      "memory usage: 119.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "X_df.info()"
    ]
@@ -104,25 +151,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_df.iloc[:, 5] = X_df['text'].apply( lambda rev: re.sub(r'(\\d+)', '', rev) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_df.iloc[:, 5] = X_df['text'].apply( lambda rev: re.sub(r'^[a]*[a-zA-Z]*$', '', rev) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_df.iloc[:, 5] = X_df['text'].apply( lambda rev: rev.replace('_', '') )"
+    "# type(X_df['text'].iloc[0])\n",
+    "\n",
+    "# re.sub(r'(\\d+)', '', '10am tacos and 5pm beers')\n",
+    "\n",
+    "# re.sub(r'(\\d+)', '', X_df['text'].iloc[0])\n",
+    "\n",
+    "# type(re.sub(r'(\\d+)', '', X_df['text'].iloc[0]))\n",
+    "\n",
+    "# X_df['text'].apply( lambda rev: type(rev) )\n",
+    "\n",
+    "\n",
+    "# X_df['text'].apply( lambda rev: re.sub(r'(\\d+)', '', rev) )\n",
+    "\n",
+    "# X_df.iloc[:, 5] = X_df['text'].apply( lambda rev: re.sub(r'^[a]*[a-zA-Z]*$', '', rev) )\n",
+    "\n",
+    "# X_df.iloc[:, 5] = X_df['text'].apply( lambda rev: rev.replace('_', '') )"
    ]
   },
   {
@@ -159,8 +203,15 @@
    "outputs": [],
    "source": [
     "stopWords = list(stopwords.words('english'))\n",
-    "stopWords.extend(['good', 'excellent', 'best', 'like', 'place', 'really', 'ordered', 'amazing', 'fantastic'])\n",
-    "\n",
+    "stopWords.extend(['good', 'excellent', 'best', 'like', 'place', 'really', 'ordered', 'amazing', 'fantastic', 'am', 'pm'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vectorizer = TfidfVectorizer(stop_words=stopWords)"
    ]
   },
