MNB tuning and cleanup; figure creation

--- a/MNB_Yelp-VegFrnd-CountVectorizer.ipynb
+++ b/MNB_Yelp-VegFrnd-CountVectorizer.ipynb
@@ -1769,25 +1769,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'MultinomialNB' object has no attribute 'feature_importances_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-3f33b19fff12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimportances\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mM_NB_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_importances_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mimportances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'MultinomialNB' object has no attribute 'feature_importances_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "importances = M_NB_model.feature_importances_\n",
+    "# importances = M_NB_model.feature_importances_\n",
     "\n",
-    "importances"
+    "# importances"
    ]
   },
   {
@@ -1885,154 +1873,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ratio of posteriors for both classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo = M_NB_model.feature_log_prob_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bar = M_NB_model.class_log_prior_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spam = (foo[1,:] - foo[0,:] + bar[1] - bar[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inds = np.argsort(spam)[-1:-200:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([6.43520455, 5.70674069, 5.69358261, 5.34679242, 5.1705414 ,\n",
-       "       4.93191548, 4.90313652, 4.90313652, 4.80343716, 4.73889864,\n",
-       "       4.71054341, 4.70165446, 4.66528682, 4.63711594, 4.61788458,\n",
-       "       4.60812841, 4.53703248, 4.51575508, 4.46049241, 4.43750289,\n",
-       "       4.43750289, 4.35260344, 4.33986442, 4.33665414, 4.32696101,\n",
-       "       4.32696101, 4.30064371, 4.26444066, 4.24583547, 4.22687756,\n",
-       "       4.2026633 , 4.18784821, 4.18784821, 4.18376935, 4.15240146,\n",
-       "       4.14203868, 4.0435986 , 4.02620686, 4.02034174, 3.99048878,\n",
-       "       3.9782935 , 3.97213964, 3.97213964, 3.93439931, 3.91498122,\n",
-       "       3.8951786 , 3.8951786 , 3.88175558, 3.8543566 , 3.84177782,\n",
-       "       3.83330319, 3.78981808, 3.78981808, 3.78981808, 3.76734523,\n",
-       "       3.74435571, 3.69672766, 3.68033385, 3.67560011, 3.64671724,\n",
-       "       3.62074175, 3.62074175, 3.62074175, 3.59856789, 3.5940735 ,\n",
-       "       3.5940735 , 3.5940735 , 3.56667453, 3.56667453, 3.56667453,\n",
-       "       3.53850365, 3.53850365, 3.50951612, 3.50951612, 3.50951612,\n",
-       "       3.50951612, 3.46439568, 3.44889149, 3.4171428 , 3.4171428 ,\n",
-       "       3.4171428 , 3.4171428 , 3.40788347, 3.40088228, 3.39618743,\n",
-       "       3.38435297, 3.38435297, 3.38435297, 3.38435297, 3.37766399,\n",
-       "       3.37691799, 3.36754586, 3.36754586, 3.35045142, 3.35045142,\n",
-       "       3.35045142, 3.3153601 , 3.3153601 , 3.31427726, 3.30338391,\n",
-       "       3.30260631, 3.27899246, 3.27899246, 3.27899246, 3.27899246,\n",
-       "       3.26969007, 3.26030032, 3.248915  , 3.2460483 , 3.24125213,\n",
-       "       3.24125213, 3.24125213, 3.23159022, 3.22183404, 3.20203142,\n",
-       "       3.20203142, 3.20203142, 3.20203142, 3.20203142, 3.20203142,\n",
-       "       3.20203142, 3.20203142, 3.18182871, 3.16120942, 3.16120942,\n",
-       "       3.16120942, 3.16120942, 3.16120942, 3.16120942, 3.16120942,\n",
-       "       3.16120942, 3.14015601, 3.12826527, 3.11864981, 3.11864981,\n",
-       "       3.11864981, 3.11864981, 3.07419805, 3.07419805, 3.07419805,\n",
-       "       3.07419805, 3.07419805, 3.07419805, 3.07419805, 3.07419805,\n",
-       "       3.05893057, 3.05893057, 3.04654651, 3.02767803, 3.02767803,\n",
-       "       3.02767803, 3.02767803, 3.02767803, 3.02767803, 3.02767803,\n",
-       "       3.01167769, 2.99612967, 2.97888787, 2.97888787, 2.97888787,\n",
-       "       2.97888787, 2.97888787, 2.97888787, 2.97888787, 2.97888787,\n",
-       "       2.97888787, 2.97888787, 2.97888787, 2.94295586, 2.93806587,\n",
-       "       2.93415197, 2.92759457, 2.92759457, 2.92759457, 2.92759457,\n",
-       "       2.92759457, 2.92759457, 2.92759457, 2.92759457, 2.92759457,\n",
-       "       2.92759457, 2.92759457, 2.90092632, 2.90092632, 2.90092632,\n",
-       "       2.89739483, 2.88732067, 2.87352735, 2.87352735, 2.87352735,\n",
-       "       2.87352735, 2.87352735, 2.87352735, 2.87352735, 2.87352735,\n",
-       "       2.87352735, 2.87352735, 2.87352735, 2.87352735])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spam[inds]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['injera', 'lalibela', 'tsoynami', 'vegenation', 'tsoynamis',\n",
-       "       'hemp', 'vegeway', 'gomen', 'grabbagreen', 'wac', 'chopt',\n",
-       "       'chakra', 'lunasagna', 'soynami', 'brimstone', 'pitaya', 'olivier',\n",
-       "       'tibs', 'tfk', 'capastrami', 'brizza', 'eatt', 'mijana', 'hussong',\n",
-       "       'pastoli', 'ruchi', 'misir', 'choolaah', 'ycs', 'wellness',\n",
-       "       'dotty', 'apteka', 'alicha', 'ethiopian', 'nami', 'grabba', 'tsom',\n",
-       "       'merkato', 'lgbtq', 'chima', 'violette', 'taytu', 'zizi', 'abay',\n",
-       "       'doro', 'yinzburgh', 'angara', 'thailicious', 'tikil', 'yayo',\n",
-       "       'mvpita', 'misoya', 'soynamis', 'teff', 'quesas', 'rawco', 'rvc',\n",
-       "       'tlt', 'fern', 'zeta', 'fosolia', 'mestizo', 'sambusas', 'turban',\n",
-       "       'doan', 'wheatgrass', 'ipho', 'chopshop', 'adda', 'graz',\n",
-       "       'cinnaholic', 'berbere', 'sega', 'ikes', 'gluuteny', 'khir',\n",
-       "       'mika', 'nush', 'buraka', 'pitza', 'capistrami', 'ganoosh',\n",
-       "       'aladdin', 'dumplinghaus', 'condesa', 'rodizio', 'kitfo', 'sonio',\n",
-       "       'zoma', 'hussongs', 'panevino', 'everly', 'jovany', 'zizis',\n",
-       "       'treehouse', 'elixirs', 'fuegos', 'nutrient', 'acai', 'rani', 'yc',\n",
-       "       'burgerim', 'cotti', 'beefless', 'tofurky', 'greene', 'kyklos',\n",
-       "       'paymon', 'gandhi', 'arieanna', 'pasties', 'bowlology', 'nandini',\n",
-       "       'nekter', 'ladonia', 'veganaise', 'dorowat', 'maca', 'davor',\n",
-       "       'runnelstone', 'oggie', 'bhushan', 'dobra', 'malaya', 'veggieat',\n",
-       "       'sprinly', 'ayib', 'naji', 'pastolis', 'tigra', 'omnis', 'cheba',\n",
-       "       'zenith', 'ceebee', 'swani', 'freshbox', 'pterodactyl', 'pinner',\n",
-       "       'nonvegan', 'yalla', 'gratine', 'sambusa', 'condessa',\n",
-       "       'veganbites', 'tawook', 'panacea', 'jungles', 'veganism',\n",
-       "       'uprooted', 'kome', 'namastay', 'awaze', 'carob', 'goku',\n",
-       "       'wafflewich', 'aladdins', 'tahini', 'taboule', 'shawerma',\n",
-       "       'quiessence', 'kosmic', 'banoffee', 'yebeg', 'kibbie', 'kye',\n",
-       "       'hummos', 'medchilada', 'zaatar', 'udupi', 'bizness', 'nakamura',\n",
-       "       'ethopian', 'blizzards', 'franktuary', 'gwavy', 'vegenaise',\n",
-       "       'kibbe', 'nojito', 'sambussa', 'dolmas', 'dorowot', 'parmageddon',\n",
-       "       'chikn', 'violettes', 'trois', 'santisima', 'moko', 'sambusek',\n",
-       "       'burtons', 'abdul', 'egglessrolls', 'swanie', 'injeera', 'genghi',\n",
-       "       'wunderhund', 'pizzarev', 'barnone', 'horchatte', 'daawat'],\n",
-       "      dtype='<U157')"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "ratio of posteriors for both classes\n",
+    "\n",
+    "foo = M_NB_model.feature_log_prob_\n",
+    "\n",
+    "bar = M_NB_model.class_log_prior_\n",
+    "\n",
+    "spam = (foo[1,:] - foo[0,:] + bar[1] - bar[0])\n",
+    "\n",
+    "inds = np.argsort(spam)[-1:-200:-1]\n",
+    "\n",
+    "spam[inds]\n",
+    "\n",
     "np.array(ftrs)[inds]"
    ]
   },
